log/build_2020-08-07_14-53-59/main/stdout_stderr.log
Scanning dependencies of target main
[ 33%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/main.cpp:2:
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:22:35: error: expected class name
class Game : public rclcpp::Node, puclic Goalie
                                  ^
1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
